[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_runner"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
futures-util = "0.3"
indexmap = { version = "2.7", features = ["serde"] }
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "json"] }
tar = "0.4"
tokio = { version = "1.43", features = ["full"] }
url = "2.5"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
